# CompileTimeBox

./: .clang-format  .gitignore  README.md  run_tests.py
.github/workflows/: test.yml
detect/: CMakeLists.txt  main.cc
include/: fatal_error.hh  metastr.hh  namedtuple.hh
include/ctb/: bitint.hh  exception.hh  namedtuple.hh  shutdown.hh  string.hh  tuple.hh  utils.hh  vector.hh
include/utfcpp/: utf8.h
include/utfcpp/utf8/: checked.h  core.h  cpp11.h  cpp17.h  cpp20.h  unchecked.h
test/: CMakeLists.txt  bitint.cc  exception.cc  namedtuple.cc  string.cc  test.cc  test_metastr.hh  test_namedtuple.hh  test_string.cc  tuple.cc  vector.cc
